# SolvePath-Library

./: README.md  example 1.py  example.py
solvepath-project/: README.md  pyproject.toml
solvepath-project/solvepath/: __init__.py  solvepath.py
solvepath-project/solvepath.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
