[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solvepath"
version = "1.0.0"
description = "A math library that provides step-by-step explanations for calculations."
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.urls]
Homepage = "https://example.com/solvepath"
Source = "https://example.com/solvepath/source"
